Check for RPCS printers and return error if Win8+

RPCS printers will cause a crash in DocumentProperties on Windows 8 and
above. Detect these printers before calling DocumentProperties and
return invalid settings so that the preview displays an error message.

Change preview area so that "Loading.." does not overwrite the error
message when invalid printer settings are obtained.

BUG=679160
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2741483002
Cr-Commit-Position: refs/heads/master@{#455789}

Former-commit-id: f197528d286b7ecb15e1d0f8d6f05609d8c4b6a4